--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
       - id: testjenkinsaction
         uses: mickeygoussetorg/trigger-jenkins-job@v1
         with:
-          jenkins-server: "http://35.232.120.3:8080/" # URL of the jenkins server
+          jenkins-server: "${{ secrets.JENKINS_HOST }}" # URL of the jenkins server
           jenkins-job: "test" # The name of the jenkins job to run
-          jenkins-username: "Shivam_purohit" # user name for accessing jenkins
-          jenkins-pat: "11860c05333fedaabe894cab59729c3b19" # personal Access token for accessing Jenkins
+          jenkins-username: "${{ secrets.JENKINS_USER }}" # user name for accessing jenkins
+          jenkins-pat: "${{ secrets.JENKINS_TOKEN }}" # personal Access token for accessing Jenkins
           poll-time: 10 # how often to poll the jenkins server for results
           timeout-value: 600 # How long to poll before timing out the action
           verbose: true # true/false - turns on extra logging
